# Crawlwise

./: .env.example  .gitignore  ADDITIONAL_FIXES_APPLIED.md  AGENTS.md  ARCHITECTURAL_AUDIT_REPORT.md  AUDIT_REPORT_V7.md  Audit_report.md  Audit_report2.md  BACKEND_MAP.md  CHANGELOG.md  CHANGELOG_2026-05-03.md  CLAUDE.md  Design_prompt.md  EXTRACTION_ENHANCEMENT_SPEC.md  EXTRACTION_FIELD_AUDIT_REPORT.md  FIRST_PRINCIPLES_AUDIT.md  FIXES_APPLIED.md  FIXES_BATCH6_APPLIED.md  FRONTEND_AUDIT_REPORT.md  FRONTEND_AUDIT_REPORT_2026-04-08.md  LICENSE  README.md  SE_PRINCIPLES_VIOLATIONS.md  TEST_SITES.md  UPDATED_AUDIT_REPORT_2026-04-08.md  acuisition-review.md  arch_audit.md  arch_audit2.md  arch_recommend.md  arch_review.md  arch_review2.md  audit.md  audit3.md  audit_pipeline.md  backend_comparison_analysis.md  bedrock_proxy.py  brainstorming.md  bug.md  bugs_triage.md  cleanup_configs.py  (+38 more)
backend/: _test_traversal.py  audit_report.json  bootstrap-dev.ps1  harness_support.py  hm_shell.html  init_db.py  parse_ce_reports.py  pyproject.toml  pyrightconfig.json  pytest.ini  records_out.txt  regression_report_1775380065.json  regression_report_1775380145.json  reverb_test.html  run_acquire_smoke.py  run_audit.py  run_audit_smoke.py  run_browser_surface_probe.py  run_coverage_test.py  run_extraction_smoke.py  run_google_native_search_smoke.py  run_json_issue_audit.py  run_regression.py  run_test_sites_acceptance.py  schema_out.txt  scratch.py  scratch_debug.py  test_audit.txt  test_audit_full.txt  test_html.txt  test_out.txt  test_output.txt  test_patchright.py  test_patchright_google_native.py  test_pruning.py  test_remediation_targets.py  test_remediation_targets_sync.py  test_results.txt  test_reverb_acq.py  test_sites_audit.py  (+2 more)
backend/.cookie_test/: example.com.json
backend/alembic/: env.py
backend/alembic/versions/: 20260402_0001_initial.py  20260403_0002_selector_xpath_first.py  20260403_0003_auth_and_status_invariants.py  20260403_0004_remove_selector_confidence.py  20260405_0005_site_memory.py  20260406_0006_drop_site_memory.py  20260406_0007_drop_selectors.py  20260408_0008_durable_queue_lease.py  20260410_0009_max_records_trigger.py  20260410_0010_crawl_log_composite_indexes.py  20260411_0011_add_url_identity_key.py  20260418_0012_domain_memory.py  20260423_0013_domain_run_profiles.py  20260423_0014_domain_learning_memory.py  20260423_0015_host_protection_memory.py  20260424_0016_host_protection_success_method.py  20260425_0017_product_intelligence.py  20260426_0018_drop_max_records_trigger.py  20260430_0019_data_enrichment.py  20260501_0020_enriched_product_taxonomy_version.py  20260501_0021_llm_cost_log_outcome.py  20260508_0022_crawl_record_content_fingerprint.py  20260509_0001_baseline_schema.py
backend/app/: main.py  tasks.py  workers.py
backend/app/api/: auth.py  crawls.py  dashboard.py  data_enrichment.py  jobs.py  llm.py  product_intelligence.py  records.py  review.py  selectors.py  site_memory.py  users.py
backend/app/core/: celery_app.py  config.py  database.py  dependencies.py  metrics.py  migrations.py  redis.py  schema_bootstrap.py  security.py  telemetry.py
backend/app/models/: __init__.py  crawl.py  crawl_domain.py  crawl_settings.py  llm.py  selector.py  site_memory.py  user.py
backend/app/schemas/: common.py  crawl.py  data_enrichment.py  llm.py  product_intelligence.py  selector.py  selectors.py  site_memory.py  user.py
backend/app/services/: _batch_progress.py  _batch_run_store.py  _batch_runtime.py  acquisition_plan.py  artifact_store.py  auth_service.py  confidence.py  crawl_access_service.py  crawl_crud.py  crawl_engine.py  crawl_events.py  crawl_fetch_runtime.py  crawl_ingestion_service.py  crawl_metadata.py  crawl_metrics.py  crawl_service.py  crawl_state.py  crawl_utils.py  dashboard_service.py  db_utils.py  detail_extractor.py  domain_memory_service.py  domain_run_profile_service.py  domain_selector_health.py  domain_utils.py  exceptions.py  extractability.py  extraction_context.py  extraction_html_helpers.py  extraction_runtime.py  field_alias_policy.py  field_policy.py  field_url_normalization.py  field_value_candidates.py  field_value_core.py  field_value_dom.py  field_value_utils.py  js_state_helpers.py  js_state_mapper.py  listing_extractor.py  (+43 more)
backend/app/tasks/: crawl_tasks.py
backend/backend_cookie_test/: example.com.json
backend/cookie_store/: in.puma.com.json  us.puma.com.json  www.allbirds.com.json  www.hatchcollection.com.json
backend/corpora/: commerce_25.json
backend/crawlerai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/docs/: database-lock-fix.md
backend/test_site_sets/: ce_details_10.json  ce_listings_10.json  commerce_25_smoke.json  commerce_browser_heavy.json  regression_baseline_v1.json
backend/tests/: conftest.py  test_adapter_runtime_settings.py  test_browser_surface_probe.py  test_config_paths.py  test_crawl_domain.py  test_crawl_schema.py  test_crawl_utils.py  test_crawler_fixes.py  test_extraction_audit_settings.py  test_extraction_fixes.py  test_harness_support.py  test_knowledge_boundary.py  test_main.py  test_normalizers.py  test_run_acquire_smoke.py  test_runtime_settings.py  test_security.py  test_smoke.py  test_tasks.py  test_workers.py
backend/tests/api/: test_auth_register.py  test_crawls_background.py  test_dashboard_reset.py  test_records_exports.py  test_records_markdown.py
backend/tests/e2e/: test_smoke_crawl.py
backend/tests/fixtures/: herman_miller_aeron.html  http_mocks.py  loader.py
backend/tests/services/: _duplication_helpers.py  test_acquirer.py  test_acquisition_domain_profile_schema.py  test_audit_2026_05_03_description_fixes.py  test_auth_service.py  test_batch_progress.py  test_batch_runtime.py  test_batch_runtime_context.py  test_batch_runtime_correlation.py  test_batch_runtime_integration.py  test_batch_runtime_retry_update.py  test_batch_runtime_summary_merge.py  test_block_detection.py  test_browser_context.py  test_browser_expansion_runtime.py  test_confidence.py  test_config_imports.py  (+79 more)
(+626 files in other folders)
