[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawlerai-backend"
version = "0.1.0"
description = "CrawlerAI POC backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.5",
  "asyncpg>=0.30.0",
  "beautifulsoup4>=4.13.4",
  "cachetools>=5.5.2",
  "celery[redis]>=5.4.0",
  "curl-cffi>=0.14.0",
  "cryptography>=46.0.5",
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "lxml>=6.0.0",
  "passlib[bcrypt]>=1.7.4",
  "playwright>=1.54.0",
  "playwright-stealth>=2.0.0",
  "prometheus-client>=0.23.1",
  "psutil>=7.1.0",
  "pydantic-settings>=2.10.0",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.24",
  "redis>=6.4.0",
  "regex>=2025.9.18",
  "sqlalchemy>=2.0.43",
  "structlog>=25.4.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
# Local/dev environments can use psycopg2-binary to avoid libpq toolchain setup.
# Production should install psycopg2 explicitly (not listed in core dependencies to avoid conflicts).
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.1.0",
  "psycopg2-binary>=2.9.10",
]
prod = [
  "psycopg2>=2.9.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
