[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawlerai-backend"
version = "0.1.0"
description = "CrawlerAI POC backend"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.13.5",
  "alembic>=1.16.5",
  "asyncpg>=0.30.0",
  "beautifulsoup4>=4.13.4",
  "cachetools>=5.5.2",
  "celery[redis]>=5.4.0",
  "curl-cffi>=0.14.0",
  "cssselect>=1.3.0",
  "dateparser>=1.2.2",
  "cryptography>=46.0.7",
  "defusedxml>=0.7.1",
  "fastapi>=0.116.0",
  "email-validator>=2.3.0",
  "httpx[socks]>=0.28.1",
  "glom>=24.11.0",
  "jmespath>=1.0.1",
  "lxml>=6.0.0",
  "passlib[bcrypt]>=1.7.4",
  "patchright>=1.58.2",
  "price-parser>=0.5.0",
  "prometheus-client>=0.23.1",
  "psutil>=7.1.0",
  "pydantic-settings>=2.10.0",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.24",
  "redis>=6.4.0",
  "regex>=2025.9.18",
  "selectolax>=0.4.7",
  "sqlalchemy>=2.0.43",
  "structlog>=25.4.0",
  "uvicorn[standard]>=0.35.0",
  "browserforge>=1.2.0",
  "extruct>=0.18.0",
  "w3lib>=2.3.1",
]

[project.optional-dependencies]
# Local/dev environments can use psycopg2-binary to avoid libpq toolchain setup.
# Production should install psycopg2 explicitly (not listed in core dependencies to avoid conflicts).
dev = [
  "hypothesis>=6.0.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.1.0",
  "psycopg2-binary>=2.9.10",
  "ruff>=0.1.0",
  "mypy>=1.20.1",
  "types-python-jose>=3.5.0.20260408",
  "types-regex>=2026.4.4.20260408",
  "lxml-stubs>=0.5.1",
  "types-jmespath>=1.1.0.20260408",
  "types-cachetools>=6.2.0.20260408",
  "types-passlib>=1.7.7.20260211",
  "pylint>=4.0.5",
  "basedpyright>=1.39.2",
  "bandit>=1.9.4",
  "vulture>=2.16",
  "radon>=6.0.1",
]
prod = [
  "psycopg2>=2.9.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pylint.main]
ignore-paths = [
  "^tests/.*$",
  "^alembic/.*$",
]

[tool.pylint.messages_control]
disable = [
  "import-error",
  "no-name-in-module",
  "line-too-long",
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-lines",
  "too-many-arguments",
  "too-many-branches",
  "too-many-locals",
  "too-many-return-statements",
  "too-many-statements",
  "duplicate-code",
  "fixme",
]

[tool.vulture]
min_confidence = 100

[tool.mypy]
python_version = "3.12"
exclude = ["tests", "alembic", "\\.venv"]

[[tool.mypy.overrides]]
module = [
  "celery",
  "celery.*",
  "glom",
  "extruct",
]
ignore_missing_imports = true
